clusters/common/apps/keiretsu/gateway/karmada.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: keiretsu-karmada-robbinsdale-apiserver.keiretsu.ts.net
    tailscale.com/proxy-group: "prod"
  name: karmada-robbinsdale-apiserver-external
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName
  ports:
  - port: 5443
    protocol: TCP
    name: client
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    tailscale.com/tailnet-fqdn: keiretsu-karmada-ottawa-apiserver.keiretsu.ts.net
    tailscale.com/proxy-group: "prod"
  name: karmada-ottawa-apiserver-external
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName
  ports:
  - port: 5443
    protocol: TCP
    name: client
