clusters/common/apps/keiretsu/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: ts
  labels:
    external-dns: keiretsu
  annotations:
    cert-manager.io/cluster-issuer: common-issuer
spec:
  gatewayClassName: ts
  listeners:
    - name: wildcard-${LOCATION}-common-https
      protocol: HTTPS
      port: 443
      hostname: "*.${LOCATION}.${COMMON_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: wildcard-${LOCATION}-common-https
    - name: wildcard-keiretsu-common-https
      protocol: HTTPS
      port: 443
      hostname: "*.keiretsu.${COMMON_DOMAIN}"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
        - group: ''
          kind: Secret
          name: wildcard-keiretsu-common-https
